--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "erlpack": "github:hammerandchisel/erlpack",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
-    "node-opus": "^0.3.3",
+    "opusscript": "0.0.7",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.6",
     "ytsr": "^0.1.10"
