--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "erlpack": "github:hammerandchisel/erlpack",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "opusscript": "0.0.7",
