--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A fun music bot made by xhayper.",
   "main": "main.js",
   "scripts": {
+    "run": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
