--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A fun music bot made by xhayper.",
   "main": "main.js",
   "scripts": {
-    "run": "node .",
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,5 +33,8 @@
     "node-opus": "^0.3.3",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   }
 }
