--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
   },
   "homepage": "https://github.com/xhayper/Rin#readme",
   "dependencies": {
+    "@isolution/youtube-audio-stream": "^1.3.1",
     "bufferutil": "^4.0.1",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "erlpack": "github:hammerandchisel/erlpack",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.24.0",
     "node-opus": "^0.3.3",
     "yt-search": "^1.1.2",
-    "ytdl-core": "^1.0.7",
-    "express": "^4.17.1",
-    "youtube-audio-stream": "^0.3.5"
+    "ytdl-core": "^1.0.7"
   },
   "engines": {
     "node": ">=12.0.0"
