--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.24.0",
-    "node-opus": "^0.3.3",
+    "opusscript": "^0.0.7",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7"
   },
