--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "moment": "^2.24.0",
     "opusscript": "^0.0.7",
     "yt-search": "^1.1.2",
-    "ytdl-core": "^1.0.7"
+    "ytdl-core": "^1.0.7",
+    "ytpl": "^0.1.19"
   },
   "engines": {
     "node": ">=12.0.0"
