--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Rin",
   "version": "2.0.0",
   "description": "A fun music bot made by xhayper.",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ."
   },
   "repository": {
     "type": "git",
@@ -34,7 +34,8 @@
     "opusscript": "^0.0.7",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7",
-    "ytpl": "^0.1.19"
+    "ytpl": "^0.1.19",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": ">=12.0.0"
