--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
     "erlpack": "github:hammerandchisel/erlpack",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.24.0",
-    "opusscript": "^0.0.7",
+    "node-opus": "^0.3.3",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7",
-    "ytpl": "^0.1.19",
-    "express": "^4.17.1"
+    "ytpl": "^0.1.19"
   },
   "engines": {
     "node": ">=12.0.0"
