--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "moment": "^2.24.0",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7",
-    "ytpl": "^0.1.19"
+    "ytpl": "^0.1.19",
+    "@discordjs/opus": "^0.1.0"
   },
   "engines": {
     "node": ">=12.0.0"
