--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
   },
   "homepage": "https://github.com/xhayper/Rin#readme",
   "dependencies": {
-    "@isolution/youtube-audio-stream": "^1.3.0",
+    "@isolution/youtube-audio-stream": "^1.3.1",
     "bufferutil": "^4.0.1",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
-    "erlpack": "github:hammerandchisel/erlpack",
-    "express": "^4.17.1",
+    "ffmpeg-static": "^4.0.0",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.24.0",
+    "utf-8-validate": "^5.0.2",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7",
     "ytpl": "^0.1.19",
-    "@discordjs/opus": "^0.1.0"
+    "zlib-sync": "^0.1.6",
+    "express": "^4.17.1"
   },
   "engines": {
     "node": ">=12.0.0"
