--- a/src/package.json
+++ b/src/package.json
@@ -2,9 +2,9 @@
   "name": "Rin",
   "version": "2.0.0",
   "description": "A fun music bot made by xhayper.",
-  "main": "src/main.js",
+  "main": "main.js",
   "scripts": {
-    "start": "node ."
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -23,11 +23,11 @@
   },
   "homepage": "https://github.com/xhayper/Rin#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.1.0",
     "@isolution/youtube-audio-stream": "^1.3.1",
     "bufferutil": "^4.0.1",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
-    "ffmpeg-static": "^4.0.0",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.24.0",
@@ -35,8 +35,7 @@
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7",
     "ytpl": "^0.1.19",
-    "zlib-sync": "^0.1.6",
-    "express": "^4.17.1"
+    "zlib-sync": "^0.1.6"
   },
   "engines": {
     "node": ">=12.0.0"
