--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ytdl-core": "^1.0.7",
     "ytpl": "^0.1.19",
     "zlib-sync": "^0.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-opus": "^0.3.2"
   },
   "engines": {
     "node": ">=12.0.0"
