--- a/package.json
+++ b/package.json
@@ -29,16 +29,16 @@
     "bufferutil": "^4.0.1",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "glob": "^7.1.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.24.0",
+    "node-opus": "^0.3.3",
     "utf-8-validate": "^5.0.2",
     "yt-search": "^1.1.2",
     "ytdl-core": "^1.0.7",
     "ytpl": "^0.1.19",
-    "zlib-sync": "^0.1.6",
-    "express": "^4.17.1",
-    "node-opus": "^0.3.2"
+    "zlib-sync": "^0.1.6"
   },
   "engines": {
     "node": ">=12.0.0"
